# orgraph

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  callgraph_truth_eval.py  pyproject.toml
.github/workflows/: release.yml
orgraph/: __init__.py  cli.py  web.py
orgraph/_vendor/: cache.py  cluster.py  mcp_ingest.py
orgraph/agents/: kiro.md
orgraph/eval/: callgraph_fixtures.py  ground_truth.py  metrics.py  runner.py
orgraph/eval/fixtures/: codewiki_gt.json  tss_backend_gt.json
orgraph/extract/: manifest.py  pyresolve.py  scip.py  scip_pb2.py  treesitter.py  types.py
orgraph/graph/: builder.py  kuzu.py  pipeline.py  query.py  schema.py
orgraph/installer/: agents.py  config.py  installer.py
orgraph/mcp/: server.py  tools.py
orgraph/search/: index.py
orgraph/topology/: call_graph.py  cluster.py  context.py  serialise.py  topology.py
orgraph/web_static/: graphology-layout-forceatlas2.min.js  index.html
tests/: test_callgraph_patterns.py  test_eval.py  test_extract.py  test_graph.py  test_mcp_tools.py  test_scip.py  test_search.py  test_topology.py
tests/fixtures/: simple_go.scip  simple_python.scip  simple_typescript.scip
tests/fixtures/simple_go/: go.mod  main.go
tests/fixtures/simple_go_workspace/: a.scip  b.scip  go.work
tests/fixtures/simple_go_workspace/modules/a/: go.mod  main.go
tests/fixtures/simple_go_workspace/modules/b/: go.mod  greet.go
tests/fixtures/simple_python/: api.py  auth.py  handlers.py  models.py
tests/fixtures/simple_python/graphify-out/cache/: stat-index.json
tests/fixtures/simple_typescript/: auth.ts  handlers.ts  models.ts  package.json  tsconfig.json  utils.ts
tests/fixtures/simple_typescript_monorepo/: a.scip  b.scip
