[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orgraph-mcp"
version = "0.1.19"
description = "Codebase knowledge graph MCP server — call chains, topology, and hybrid search for coding agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Pranav Kumar", email = "pranav.kumar@thesouledstore.com" }
]
keywords = ["mcp", "codebase", "knowledge-graph", "code-search", "agents", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "kuzu>=0.8,<0.10",
    "semble>=0.3.4",
    "networkx>=3.4",
    "fastmcp>=2.0",
    "protobuf>=3.20,<3.21",
    "tree-sitter>=0.23,<0.26",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "rich>=13.0",
    "orjson>=3.9",
    "pathspec>=0.12",
    "questionary>=2.0",
]

[project.urls]
Homepage = "https://github.com/tss-pranavkumar/orgraph"
Repository = "https://github.com/tss-pranavkumar/orgraph"
"Bug Tracker" = "https://github.com/tss-pranavkumar/orgraph/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
orgraph = "orgraph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["orgraph"]
include = ["orgraph/agents/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
