[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orgraph-mcp"
version = "0.1.34"
description = "Codebase knowledge graph MCP server — call chains, topology, and hybrid search for coding agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Pranav Kumar", email = "pranav.kumar@thesouledstore.com" }
]
keywords = ["mcp", "codebase", "knowledge-graph", "code-search", "agents", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "kuzu>=0.8,<0.10",
    "semble>=0.3.4",
    "networkx>=3.4",
    "fastmcp>=2.0",
    "protobuf>=3.20,<3.21",
    "tree-sitter>=0.23,<0.26",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    # Grammars the bundled extractor already supports — ship them so these
    # languages work out of the box (without these, repos in these langs index
    # to 0 nodes). The spottier grammars live in the [languages-extra] extra.
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-php>=0.23",
    "rich>=13.0",
    "orjson>=3.9",
    "pathspec>=0.12",
    "questionary>=2.0",
]

[project.urls]
Homepage = "https://github.com/tss-pranavkumar/orgraph"
Repository = "https://github.com/tss-pranavkumar/orgraph"
"Bug Tracker" = "https://github.com/tss-pranavkumar/orgraph/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# Extra grammars the bundled extractor also supports (Kotlin, Scala, Groovy, Lua,
# Swift, …) use incompatible/older release schemes and aren't pinned here. The
# extractor imports them lazily and degrades gracefully, so to enable one just
# install its grammar into the same env, e.g. `uv pip install tree-sitter-kotlin`.

[project.scripts]
orgraph = "orgraph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["orgraph"]
include = ["orgraph/agents/*.md", "orgraph/web_static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
